# serbia_elections

./: Pokrajina_merged.geojson  Republika_merged.geojson  Serbia_admin1.geojson  Serbia_admin2.geojson  clean_up.ipynb  customStyle.css  index.html  index.js  layers.qgz  map.js  new_borders.geojson  parlamentarni_2016.csv  parlamentarni_2016_latlon - parlamentarni_2016.csv  plotlypopup.js  pyproject.toml  results_by_opstina.geojson  results_by_opstina2.geojson  results_by_regions.geojson
serbia/: .ipynb_checkpoints - Verknüpfung.lnk
tests/: test_serbia.py
