[tool.poetry]
name = "serbia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
jupyter = "^1.0.0"
Shapely = "^1.8.1"
geojson = "^2.5.0"
geopandas = "^0.10.2"
pygeos = "^0.12.0"
Rtree = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
